--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -3,7 +3,7 @@
   "changelog": [
     "@changesets/changelog-github",
     {
-      "repo": "eryph-org/ruby-computeclient"
+      "repo": "eryph-org/ruby-client"
     }
   ],
   "commit": false,
