--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,7 +3,9 @@ trigger:
 
 
 pool:
-  vmImage: 'windows-latest'
+  name: eryph
+  demands:
+  - Agent.Name -equals vsts-agent
 
 variables:
   RUBY_VERSION: '3.1'
