remove release pipeline steps

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,16 +13,7 @@ pr:
     include:
     - main
 
-# Manual trigger parameters for releases
-parameters:
-- name: runRelease
-  displayName: 'Run Release Stage'
-  type: boolean
-  default: false
-- name: dryRun
-  displayName: 'Dry Run (test release without publishing)'
-  type: boolean
-  default: true
+# No manual parameters needed for build-only pipeline
 
 pool:
   name: eryph
@@ -142,114 +133,3 @@ stages:
         echo "=== End Summary ==="
       displayName: 'Build summary'
       condition: always()
-
-# Stage 2: Release to RubyGems (Requires Manual Approval)
-- stage: Release
-  displayName: 'Release to RubyGems'
-  condition: and(succeeded(), eq('${{ parameters.runRelease }}', true))
-  variables:
-  - group: rubygems-eryph # Contains RUBYGEMS_API_TOKEN
-  
-  jobs:
-  - deployment: PublishGems
-    displayName: 'Publish Gems to RubyGems.org'
-    environment: 'rubygems-production'  # ← MANUAL APPROVAL REQUIRED HERE
-    strategy:
-      runOnce:
-        deploy:
-          steps:
-          # Checkout with full history for changeset
-          - checkout: self
-            persistCredentials: true
-            fetchDepth: 0
-            fetchTags: true
-          
-          # Fix detached HEAD state for changeset
-          - script: |
-              echo "Checking out branch to fix detached HEAD..."
-              git checkout $(Build.SourceBranchName)
-              git config --global user.email "ci@eryph.io"
-              git config --global user.name "Eryph CI"
-            displayName: 'Fix detached HEAD and configure git'
-          
-          # Install Node.js dependencies and run changeset
-          - powershell: |
-              npm install -g pnpm
-              npx pnpm install
-              
-              Write-Host "Current changeset status:"
-              npx pnpm changeset:status
-              
-              Write-Host "Running changeset version to bump package versions..."
-              npx pnpm changeset:version
-              
-              Write-Host "Git status after version bump:"
-              git status
-            displayName: 'Bump versions with changeset'
-          
-          # Set up Ruby
-          - script: |
-              set PATH=$(RUBY_PATH);%PATH%
-              gem update --system --no-document
-              gem install bundler -v $(BUNDLER_VERSION) --no-document
-            displayName: 'Set up Ruby'
-          
-          # Install dependencies
-          - script: |
-              set PATH=$(RUBY_PATH);%PATH%
-              bundle install --jobs 4 --retry 3
-            displayName: 'Install Ruby dependencies'
-          
-          
-          # Publish gems using existing changeset workflow
-          - powershell: |
-              # Set RubyGems API token from secret variable
-              $env:GEM_HOST_API_KEY = "$(RUBYGEMS_API_TOKEN)"
-              
-              if ('${{ parameters.dryRun }}' -eq 'true') {
-                Write-Host "=== DRY RUN MODE - Testing publish workflow ==="
-                npx pnpm publish:gems --dry-run
-              } else {
-                Write-Host "=== PUBLISHING GEMS TO RUBYGEMS.ORG ==="
-                npx pnpm changeset:publish
-              }
-            displayName: 'Publish gems to RubyGems'
-            env:
-              GEM_HOST_API_KEY: $(RUBYGEMS_API_TOKEN)
-          
-          # Commit version changes after successful publish
-          - powershell: |
-              if ('${{ parameters.dryRun }}' -eq 'false') {
-                Write-Host "Committing version changes after successful publish..."
-                
-                # Re-run changeset version to get the changes in this stage
-                npx pnpm changeset:version
-                
-                $changes = git diff --name-only
-                if ($changes) {
-                  git add .
-                  git commit -m "Version packages [skip ci]"
-                  git push origin HEAD:$(Build.SourceBranchName)
-                  Write-Host "✅ Version changes committed and pushed"
-                } else {
-                  Write-Host "ℹ️  No version changes to commit"
-                }
-              } else {
-                Write-Host "Skipping version commit (dry run mode)"
-              }
-            displayName: 'Commit version changes'
-            condition: succeeded()
-          
-          # Final summary
-          - powershell: |
-              Write-Host "=== RELEASE SUMMARY ==="
-              if ('${{ parameters.dryRun }}' -eq 'true') {
-                Write-Host "✅ DRY RUN COMPLETED - No gems were published"
-                Write-Host "To publish for real, re-run with Dry Run = false"
-              } else {
-                Write-Host "🎉 RELEASE COMPLETED - Gems published to RubyGems.org"
-                Write-Host "Check your gems at: https://rubygems.org/profiles/eryph"
-              }
-              Write-Host "=== END SUMMARY ==="
-            displayName: 'Release summary'
-            condition: always()
